[package]
name = "rcc_android"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rcc_android"
crate-type = ["cdylib"]


[dependencies]
prost = "0.8"
rcc_signer = {path = "/Users/sora/keystone/rust-crypto-core/signer"}
hex = "0.4.3"
thiserror="1.0"
rcc-near="0.1.1"
rcc-trait-chain="0.1.0"
rcc-solana = "0.3.1"
rcc_polkadot = {git = "ssh://git@github.com/KeystoneHQ/rust-crypto-core.git", tag = "rcc_polkadot@0.1.1"}
rcc-aptos = "0.1.0"
rcc-cosmos = "0.1.0"
#logging
log="*"
log-panics = "*"
android_logger="*"

rifgen="*"
jni-sys="*"

[build-dependencies]
prost-build = "0.8"
flapigen = "0.6.0-pre9"
rifgen = "*"